# RQMS

./: .gitignore  .replit  README.md  app.py  keep_alive.py  login.py  pyproject.toml  render.yaml  start.sh
.streamlit/: config.toml
data/: modules.csv  rejection_types.csv  rejections.csv  users.json
pages/: 00_Dashboard.py  01_Data_Entry.py  02_Manage_Types.py  03_Email_Settings.py  04_Batch_Entry.py  05_User_Management.py
utils/: auth.py  data_manager.py  email_sender.py  scheduler.py
