[project]
name = "qrms"
version = "1.0.0"
description = "Quality Rejection Management System"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0", 
    "plotly>=5.15.0",
    "schedule>=1.2.0"
]

[tool.setuptools]
packages = []

[tool.setuptools.package-dir]
"" = "."

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"